--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Home Page</title>
+  <title>PasswordKeepR - Your Organization's Password Manager</title>
 
   <meta charset="UTF-8" >
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
@@ -12,13 +12,51 @@
   <link rel="stylesheet" href="/vendor/border-box.css" />
   <link rel="stylesheet" href="/styles/main.css" />
   <link rel="stylesheet" href="/styles/layout.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
   <script src="/vendor/jquery-3.0.0.js"></script>
   <script defer src="/scripts/app.js"></script>
 </head>
 
 <body>
-  <h1>Have fun! 🥔</h1>
+  <header class="navbar">
+    <div class="navbar-brand"><h1>PasswordKeepR</h1></div>
+    <navigation>Menus</navigation>
+  </header> <!-- Will contain logo, etc -->
+  <main>
+    <div>
+      <table class="table">
+        <thead> <!-- You can insert your JS/JQuery code here -->
+          <th>Website</th>
+          <th>User Name</th>
+          <th>Password</th>
+          <th>URL</th>
+          <th>Category</th>
+          <th>Edit/Delete</th>
+        </thead>
+        <tbody>
+        <tr>
+          <td>Facebook</td>
+          <td>johndoe_facebook</td>
+          <td>F@c3bOOk1234</td>
+          <td><a href="https://facebook.com">https://facebook.com</a></td>
+          <td>Social</td>
+          <td>edit/delete</td>
+        </tr>
+        <tr>
+          <td>Facebook</td>
+          <td>johndoe_facebook</td>
+          <td>F@c3bOOk1234</td>
+          <td><a href="https://facebook.com">https://facebook.com</a></td>
+          <td>Social</td>
+          <td>edit/delete</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </main>
+  <footer>Copyright 2023 | PasswordKeepR, LLC | Canada</footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
 </html>
