--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
@@ -13,55 +13,65 @@
   <link rel="stylesheet" href="/styles/main.css" />
   <link rel="stylesheet" href="/styles/layout.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
-  <!-- Font Awesome CDN   -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon_32x32.png">
   <script src="/vendor/jquery-3.0.0.js"></script>
   <script defer src="/scripts/app.js"></script>
 </head>
 
 <body>
-  <header class="navbar">
-    <div class="navbar-brand"><h1>PasswordKeepR</h1></div>
-    <navigation>Menus</navigation>
-  </header> <!-- Will contain logo, etc -->
-  <main>
-    <div>
-      <table class="table">
-        <thead> <!-- You can insert your JS/JQuery code here -->
-          <th>Website</th>
-          <th>User Name</th>
-          <th>Password</th>
-          <th>URL</th>
-          <th>Category</th>
-          <th>Edit/Delete</th>
-        </thead>
-        <tbody>
-        <tr>
-          <td>Facebook</td>
-          <td>johndoe_facebook</td>
-          <td>F@c3bOOk1234</td>
-          <td><a href="https://facebook.com">https://facebook.com</a></td>
-          <td>Social</td>
-          <td>edit/delete</td>
-        </tr>
-        <tr>
-          <td>Facebook</td>
-          <td>johndoe_facebook</td>
-          <td>F@c3bOOk1234</td>
-          <td><a href="https://facebook.com">https://facebook.com</a></td>
-          <td>Social</td>
-          <td>edit/delete</td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-  </main>
-  <footer>Copyright 2023 | PasswordKeepR, LLC | Canada</footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <header class="navbar rounded-top bg-light" style="--bs-bg-opacity: .5;">
+      <div class="navbar-brand">
+        <h1>PasswordKeepR</h1>
+        <small class="text-muted">Your Organization's Password Manager</small>
+      </div>
+      <navigation>Menus</navigation>
+    </header> <!-- Will contain logo, etc -->
+    <main class="bg-light" style="--bs-bg-opacity: .5;">
+      <div class="table-responsive">
+        <table class="table table-bordered table-hover">
+          <thead class="thead-light"> <!-- You can insert your JS/JQuery code here -->
+            <th>Website</th>
+            <th>User Name</th>
+            <th>Password</th>
+            <th>URL</th>
+            <th>Category</th>
+            <th>Actions</th>
+          </thead>
+          <tbody>
+          <tr>
+            <th scope="row">Facebook</th>
+            <td class="text-truncate">johndoe_facebook <i class="bi bi-copy pull-right"></i></td>
+            <td class="text-truncate">F@c3bOOk1234 <i class="bi bi-copy"></i></td>
+            <td class="text-truncate"><a href="https://facebook.com">https://facebook.com</a></td>
+            <td>Social</td>
+            <td><i class="bi bi-pencil-square"></i> <i class="bi bi-trash3"></i></td>
+          </tr>
+          <tr>
+            <th scope="row">Instagram</th>
+            <td>johndoe_instagram <i class="bi bi-copy"></i></td>
+            <td>F@c3bOOk1234 <i class="bi bi-copy"></i></td>
+            <td><a href="https://facebook.com">https://facebook.com</a></td>
+            <td>Social</td>
+            <td><i class="bi bi-pencil-square"></i> <i class="bi bi-trash3"></i></td>
+          </tr>
+          <tr>
+            <th scope="row">Twitter</th>
+            <td>johndoe_twitter <i class="bi bi-copy"></i></td>
+            <td>F@c3bOOk1234 <i class="bi bi-copy"></i></td>
+            <td><a href="https://facebook.com">https://facebook.com</a></td>
+            <td>Social</td>
+            <td><i class="bi bi-pencil-square"></i> <i class="bi bi-trash3"></i></td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </main>
+    <footer class="rounded-bottom bg-light" style="--bs-bg-opacity: .5;">Copyright 2023 | PasswordKeepR, LLC | Canada</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
 </html>
