--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -15,6 +15,9 @@ main {
   padding: 1em;
   background-color: white;
 }
+.container {
+  background-color: white;
+}
 footer {
   min-width: 900px;
   padding: 1em;
