--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,13 +35,13 @@
 
         <article class="password-item">
           <div class="website-name">
-            <span>Website:</span>
-            <span>Facebook ${webName}</span>
+            <span class="col">Website:</span>
+            <span class="col">Facebook ${webName}</span>
           </div>
           <div class="user-id">
-            <span>User Name:</span>
-            <span>${userId}</span>
-            <span><i class="bi bi-copy"></i></span>
+            <span class="col">User Name:</span>
+            <span class="col">${userId}</span>
+            <span class="col"><i class="bi bi-copy"></i></span>
           </div>
           <div class="password">
             <span>Password:</span>
