fetched password lists and rendered

--- a/views/test.ejs
+++ b/views/test.ejs
@@ -33,33 +33,9 @@
       <!-- container for holding the tweets from the database -->
       <div id="container">
 
-        <article class="password-item">
-          <div class="website-name">
-            <span>Website:</span>
-            <span>Facebook ${webName}</span>
-          </div>
-          <div class="user-id">
-            <span>User Name:</span>
-            <span>${userId}</span>
-            <span><i class="bi bi-copy"></i></span>
-          </div>
-          <div class="password">
-            <span>Password:</span>
-            <span>${password}</span>
-            <span><i class="bi bi-copy"></i></span>
-          </div>
-          <div class="url">
-            <span>URL:</span>
-            <span><a href="${url}">${url}</a></span>
-          </div>
-          <div class="category">
-            <span>Category:</span>
-            <span>${category}</span>
-          </div>
-          <div class="actions">
-              <i class="bi bi-pencil-square"></i> <i class="bi bi-trash3"></i>
-          </div>
-        </article>
+        <section id="password-container">
+          
+        </section>
 
         <article class="password-item-form">
           <form id="form">
