--- a/styles/main.scss
+++ b/styles/main.scss
@@ -10,19 +10,27 @@ body {
   background-image: url("/images/scott-webb-hDyO6rr3kqk-unsplash.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  padding-top: 2em;
+  padding: 2em;
+}
+
+.logo {
+  width: 250px;
+}
+
+.org-logo {
+  width: 250px;
 }
 
 .bi {
-  color: rgb(108, 108, 108);
+  color: rgb(255, 255, 255);
 }
 
-.bi:hover {
-  color: rgb(0, 72, 255);
+.bi-copy {
+  color: #575757;
+  padding: 0.5em;
+}
+
+.bi-copy:hover {
   cursor: pointer;
-}
-
-td > i {
-  float: right;
-  padding: 0 0.7em;
+  color: blue;
 }
