removed edit and delete buttons on passwords list

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -25,12 +25,22 @@ body {
   color: rgb(255, 255, 255);
 }
 
-.bi-copy {
+.bi-copy,
+.bi-pencil-square {
   color: #575757;
+  padding: 0.5em;
+  margin: 0 1em;
+}
+
+.bi-copy:hover,
+.bi-pencil-square:hover {
+  cursor: pointer;
+  color: blue;
   padding: 0.5em;
 }
 
-.bi-copy:hover {
-  cursor: pointer;
-  color: blue;
+.bi-trash3 {
+  color: red;
+  padding: 0.5em;
+  margin: 0 1em;
 }
