--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,8 +61,8 @@
             <span class="col p-1">${category}</span>
           </div>
           <div class="actions text-end">
-            <button class="btn btn-warning shadow m-2" type="submit" value="edit"><i class="bi bi-pencil-square"></i> Edit</button>
-            <button class="btn btn-danger shadow m-2" type="submit" value="delete"><i class="bi bi-trash3"></i> Delete</button>
+            <a href="" title="Edit"><i class="bi bi-pencil-square"></i></a> |
+            <a href="" title="Delete"><i class="bi bi-trash3"></i></a>
           </div>
         </section>
 
