--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -15,7 +15,7 @@ main {
   padding: 1em;
   background-color: #DADACA;
 }
-#container {
+.container {
   background-color: white;
   display: flex;
   min-width: 90%;
