fixed the background-attachment in css

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,7 @@ body {
   min-height: 100vh;
   background-image: url("/images/scott-webb-hDyO6rr3kqk-unsplash.jpg");
   background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
   padding: 2em;
 }
