copy functionality implemented

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon_32x32.png">
   <script src="/vendor/jquery-3.0.0.js"></script>
   <script defer src="/scripts/app.js"></script>
+  <script src="/scripts/copyToClipboard.js"></script>
 </head>
 
 <body>
@@ -71,36 +72,9 @@
           </form>
         </section>
       </div>
-      <!-- container for holding the tweets from the database -->
+      <!-- container for holding the passwords from the database -->
       <div id="password-list">
 
-        <section class="password-item rounded shadow">
-          <div class="website-name row">
-            <h2>Facebook ${webName}</h2>
-          </div>
-          <div class="user-id row">
-            <span class="col-2 p-1 text-end">User Name:</span>
-            <span class="col p-1">${userId}</span>
-            <span class="col p-1"><a href=""><i class="bi bi-copy"></i></a></span>
-          </div>
-          <div class="password row">
-            <span class="col-2 p-1 text-end">Password:</span>
-            <span class="col p-1">${password}</span>
-            <span class="col p-1"><a href=""><i class="bi bi-copy"></i></a></span>
-          </div>
-          <div class="url row">
-            <span class="col-2 p-1 text-end">URL:</span>
-            <span class="col p-1"><a href="${url}">${url}</a></span>
-          </div>
-          <div class="category row">
-            <span class="col-2 p-1 text-end">Category:</span>
-            <span class="col p-1">${category}</span>
-          </div>
-          <div class="actions text-end">
-            <a href="" title="Edit"><i class="bi bi-pencil-square"></i></a> |
-            <a href="" title="Delete"><i class="bi bi-trash3"></i></a>
-          </div>
-        </section>
 
       </div>
 
