--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
 
 <body>
 
-    <header class="navbar rounded-top bg-light" style="--bs-bg-opacity: .5; --bs-light-rgb: 218,218,202;">
+    <header class="navbar rounded-top-4 bg-light" style="--bs-bg-opacity: .5; --bs-light-rgb: 218,218,202;">
       <div class="navbar-brand">
         <div><img class="logo" src="./images/passwordkeepr_logo.png" alt="PasswordKeepR"></div>
         <small class="text-muted">Your Organization's Password Manager</small>
@@ -78,9 +78,9 @@
 
       </div>
 
-      
+
     </main>
-    <footer class="rounded-bottom bg-light" style="--bs-bg-opacity: .5; --bs-light-rgb: 218,218,202;">
+    <footer class="rounded-bottom-4 bg-light" style="--bs-bg-opacity: .5; --bs-light-rgb: 218,218,202;">
       <div>Copyright 2023 | PasswordKeepR, LLC | Canada</div>
     </footer>
 
