--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,72 +19,129 @@
   <script src="/vendor/jquery-3.0.0.js"></script>
   <script defer src="/scripts/app.js"></script>
   <script src="/scripts/copyToClipboard.js"></script>
+
+
+
 </head>
 
 <body>
 
-    <header class="navbar rounded-top-4 bg-light" style="--bs-bg-opacity: .5; --bs-light-rgb: 218,218,202;">
-      <div class="navbar-brand">
-        <div><img class="logo" src="./images/passwordkeepr_logo.png" alt="PasswordKeepR"></div>
-        <small class="text-muted">Your Organization's Password Manager</small>
+    <header class="navbar rounded-top-4 bg-light row align-items-start" style="--bs-bg-opacity: .5; --bs-light-rgb: 218,218,202;">
+      <div class="col">
+        <div class=""><img class="logo" src="./images/passwordkeepr_logo.png" alt="PasswordKeepR"></div>
+        <div class="">Your Organization's Password Manager</div>
       </div>
-      <navigation class="navi">
+      <navigation class="navi text-end col">
         <div><img class="org-logo" src="./images/org-logo_01.png" alt="Company Logo 01"></div>
-        <div>Welcome, John Doe! ${user_name}</div>
+        <div class="mt-3">Welcome, John Doe! ${user_name}</div>
         <div class="menu"><a href="" >List All</a> | <a href="">Logout ></a></div>
-        <button type="button" class="btn btn-success mt-2"><i class="bi bi-plus"></i> New Password</button>
+        <button type="button" class="btn btn-success shadow mt-3"><i class="bi bi-plus"></i> New Password</button>
       </navigation>
     </header>
     <main class="bg-light" style="--bs-bg-opacity: .5; --bs-light-rgb: 218,218,202;">
       <!-- container for holding the Edit/Add new password Form -->
-      <div class="container">
-        <section class="password-item rounded shadow m-0">
+
+        <section id="newPassword" class="rounded bg-light-subtle shadow m-3 p-4">
           <h2>Edit / Create New Password</h2>
-          <form id="form" class="row">
-            <div class="col m-0">
-              <div class="website-name row m-0">
-                <div class="col-3 p-1 text-end"><label for="website-name">Website:</label></div>
-                <div class="col-2"><input type="text" id="webName" name="webName"></div>
+          <form id="form">
+            <div class="row">
+              <div class="website-name col">
+                <div class=""><label for="website-name">Website:</label></div>
+                <div class=""><input type="text" id="webName" name="webName"></div>
               </div>
-              <div class="user-id row m-0">
-                <div class="col-3 p-1 text-end"><label for="user-name">User Name:</label></div>
-                <div class="col-2"><input type="text" id="userName" name="userName"></div>
-              </div>
-              <div class="password row m-0">
-                <div class="col-3 p-1 text-end"><label for="password">Password:</label></div>
-                <div class="col-2"><input type="text" id="password" name="password"></div>
+
+              <div class="url col">
+                <div class=""><label for="url">URL:</label></div>
+                <div class=""><input type="text" id="url" name="url"></div>
               </div>
             </div>
-            <div class="col mt-0">
-              <div class="url row m-0">
-                <div class="col-3 p-1 text-end"><label for="url">URL:</label></div>
-                <div class="col-3"><input type="text" id="url" name="url"></div>
+            <div class="row">
+              <div class="user-id col">
+                <div class=""><label for="user-name">User Name:</label></div>
+                <div class=""><input type="text" id="userName" name="userName"></div>
               </div>
-              <div class="category row m-0">
-                <div class="col-3 p-1  m-0 text-end"><label for="category">Category:</label></div>
-                <div class="col-3 m-0"><input type="text" id="category" name="category"></div>
+
+              <div class="category col">
+                <label for="categories" class="form-label">Category:</label>
+                <input class="form-control" list="categoryOptions" id="categories" placeholder="Type to search...">
+                <datalist id="categoryOptions">
+                  <option value="Social">
+                  <option value="Work Related">
+                  <option value="Entertainment">
+                  <option value="Finance">
+                  <option value="Health and Fitness">
+                  <option value="Education">
+                </datalist>
               </div>
             </div>
-            <div class="actions text-end">
-              <button class="btn btn-success shadow m-2" type="submit" value="Save"><i class="bi bi-floppy"></i> Save</button>
-              <button class="btn btn-secondary shadow m-2" type="reset" value="Cancel"><i class="bi bi-exclamation-circle"></i> Cancel</button>
+
+            <div class="row">
+              <div class="password col">
+                <div class=""><label for="password">Password:</label></div>
+                <div class=""><input type="text" id="password" name="password"></div>
+
+                <div class="row">
+                  <label for="customRange1" class="form-label">Number of Characters:</label>
+                  <input type="range" class="form-range" id="customRange1" value="8" min="8" max="30" oninput="this.nextElementSibling.value = this.value">
+                  <output class="col">8</output>
+                </div>
+
+                <div class="row">
+                  <div class="form-check col">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      ABCDE
+                    </label>
+                  </div>
+                  <div class="form-check col">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+                    <label class="form-check-label" for="flexCheckChecked">
+                      abcde
+                    </label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="form-check col">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      12345
+                    </label>
+                  </div>
+                  <div class="form-check col">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+                    <label class="form-check-label" for="flexCheckChecked">
+                      !@#$%
+                    </label>
+                  </div>
+                </div>
+              </div>
+
+
+            </div>
+            <div class="row">
+              <div class="actions col">
+                <button class="btn btn-success shadow m-2" type="submit" value="Save"><i class="bi bi-floppy"></i> Save</button>
+                <button class="btn btn-secondary shadow m-2" type="reset" value="Cancel"><i class="bi bi-exclamation-circle"></i> Cancel</button>
+              </div>
             </div>
           </form>
         </section>
-      </div>
+
+
+
       <!-- container for holding the passwords from the database -->
       <div id="password-list">
 
 
       </div>
 
-
     </main>
-    <footer class="rounded-bottom-4 bg-light" style="--bs-bg-opacity: .5; --bs-light-rgb: 218,218,202;">
+    <footer class="rounded-bottom-4 bg-light text-center" style="--bs-bg-opacity: .5; --bs-light-rgb: 218,218,202;">
       <div>Copyright 2023 | PasswordKeepR, LLC | Canada</div>
     </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
