fixed form errors

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,21 +48,21 @@
               <div class="website-name col-6">
                 <div class="form-floating mb-3">
                   <input type="email" class="form-control" id="websiteName" placeholder="Website Name">
-                  <label for="floatingInput">Website Name</label>
+                  <label for="websiteName">Website Name</label>
                 </div>
               </div>
               <div class="url col-6">
                 <div class="form-floating mb-3">
                   <input type="text" class="form-control" id="url" placeholder="Website Address">
-                  <label for="floatingInput">URL</label>
+                  <label for="url">URL</label>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="user-id col-6">
                 <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="userName" placeholder="User Name">
-                  <label for="floatingInput">User Name</label>
+                  <input type="text" class="form-control" id="userName" placeholder="User Name" autocomplete="off">
+                  <label for="userName">User Name</label>
                 </div>
               </div>
 
@@ -85,7 +85,7 @@
                 <div class="password col-6">
                   <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="password" placeholder="Password">
-                    <label for="floatingInput">Password:</label>
+                    <label for="password">Password:</label>
                   </div>
                 </div>
                 <div class="col-6">
