--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
         <div><img class="org-logo" src="./images/org-logo_01.png" alt="Company Logo 01"></div>
         <div class="mt-3">Welcome, John Doe! ${user_name}</div>
         <div class="menu">
-          <a href="" >List All</a> | 
+          <a href="" >List All</a> |
           <form action="/logout" method="post" style="display: inline;">
             <button type="submit" class="btn-link" style="border: none; padding: 0; background: none;">Logout</button>
           </form>
@@ -89,8 +89,8 @@
               <div class="row">
                 <div class="password col-6">
                   <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="password" placeholder="Password">
-                    <label for="password">Password:</label>
+                    <input type="text" class="form-control" id="outputPassword" placeholder="Password">
+                    <label for="outputPassword">Password:</label>
                   </div>
                 </div>
                 <div class="col-6">
@@ -109,24 +109,30 @@
                 </div>
               </div>
               <div class="row ps-5">
-                <div class="form-check form-switch col-6">
-                  <input class="form-check-input" type="checkbox" role="switch" value="" id="allCaps">
+                <div class="form-check form-switch col-3">
+                  <input class="form-check-input" type="checkbox" role="switch" value="" id="allCaps" checked>
                   <label class="form-check-label" for="allCaps">
                     ABCDE
                   </label>
                 </div>
-                <div class="form-check form-switch col-6">
-                  <input class="form-check-input" type="checkbox" role="switch" value="" id="lowerCase">
-                  <label class="form-check-label" for="lowerCase">
-                    abcde
+                <div class="form-check form-switch col-3">
+                  <input class="form-check-input" type="checkbox" role="switch" value="" id="numbers" checked>
+                  <label class="form-check-label" for="numbers">
+                    12345
+                  </label>
+                </div>
+                <div class="form-check form-switch col-3">
+                  <input class="form-check-input" type="checkbox" role="switch" value="" id="no-duplicates">
+                  <label class="form-check-label" for="no-duplicates">
+                    no duplicates
                   </label>
                 </div>
               </div>
               <div class="row ps-5">
-                <div class="form-check form-switch col-6">
-                  <input class="form-check-input" type="checkbox" role="switch" value="" id="numbers">
-                  <label class="form-check-label" for="numbers">
-                    12345
+                <div class="form-check form-switch col-3">
+                  <input class="form-check-input" type="checkbox" role="switch" value="" id="lowerCase" checked>
+                  <label class="form-check-label" for="lowerCase">
+                    abcde
                   </label>
                 </div>
                 <div class="form-check form-switch col-3">
@@ -135,8 +141,10 @@
                     !@#$%
                   </label>
                 </div>
-                <div class="col-3">
-                  <button class="btn btn-warning shadow m-2" type="submit" value="generate"><i class="bi bi-lightning-charge-fill"></i> GENERATE</button>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <button onclick="generate()" class="btn btn-warning shadow m-2"><i class="bi bi-lightning-charge-fill"></i> RANDOMIZE!</button>
                 </div>
               </div>
             </div>
@@ -165,7 +173,64 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
+<script>
+  function generate() {
+    // get references of all the inputs
+    const length = document.getElementById("passwordRange").value;
+    const useUppercase = document.getElementById("allCaps").checked;
+    const useLowercase = document.getElementById("lowerCase").checked;
+    const useNumbers = document.getElementById("numbers").checked;
+    const useSymbols = document.getElementById("symbols").checked;
+    const excludeDuplicates = document.getElementById("no-duplicates").checked;
 
+    // generate the random password
+    const password = generatePassword(parseInt(length), useUppercase, useLowercase, useNumbers, useSymbols, excludeDuplicates)
+
+    // show the password
+    document.getElementById('outputPassword').value = password
+  }
+
+
+
+  function generatePassword(length, useUppercase, useLowercase, useNumbers, useSymbols, excludeDuplicates) {
+  let charset = '';
+
+  if (useUppercase) {
+    charset += 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+  }
+
+  if (useLowercase) {
+    charset += 'abcdefghijklmnopqrstuvwxyz';
+  }
+
+  if (useNumbers) {
+    charset += '0123456789';
+  }
+
+  if (useSymbols) {
+    charset += '!@#$%^&*()-_+=<>?';
+  }
+
+  let password = '';
+  let prevChar = '';
+
+  for (let i = 0; i < length; i++) {
+    let randomChar = charset.charAt(Math.floor(Math.random() * charset.length));
+
+    // Check if excluding duplicates is enabled and the current character is the same as the previous one
+    if (excludeDuplicates && randomChar === prevChar) {
+      // If so, generate a new random character
+      i--;
+      continue;
+    }
+
+    password += randomChar;
+    prevChar = randomChar;
+  }
+  return password;
+}
+
+</script>
 
 </body>
 
