implemented add new password to server and rendered it on main page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,7 +58,7 @@
 
         <section id="newPassword" class="rounded-3 bg-light-subtle shadow m-3 p-4">
           <h2 id="sectionHeader"></h2>
-          <form id="passwordForm">
+          <form id="passwordForm" >
             <div class="row">
               <div class="website-name col-6">
                 <div class="form-floating mb-3">
@@ -162,7 +162,7 @@
             <div class="row text-center">
               <div class="actions col">
                 <button class="btn btn-success shadow m-2" type="submit" value="Save"><i class="bi bi-floppy"></i> Save</button>
-                <button class="btn btn-secondary shadow m-2" type="reset" value="Cancel"><i class="bi bi-exclamation-circle"></i> Cancel</button>
+                <button class="btn btn-secondary shadow m-2" value="Cancel"><i class="bi bi-exclamation-circle"></i> Cancel</button>
               </div>
             </div>
           </form>
