--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,11 +12,13 @@
   <link rel="stylesheet" href="/vendor/border-box.css" />
   <link rel="stylesheet" href="/styles/main.css" />
   <link rel="stylesheet" href="/styles/layout.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" />
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.1/themes/smoothness/jquery-ui.css" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon_32x32.png">
-  <script src="/vendor/jquery-3.0.0.js"></script>
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon_32x32.png" />
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
   <script defer src="/scripts/app.js"></script>
   <script src="/scripts/copyToClipboard.js"></script>
 
@@ -28,7 +30,13 @@
         $("#passwordForm").trigger("reset");
         $("#newPassword").toggle();
       });
+      $("#closeMe").click(function(){
+        $("#newPassword").toggle();
+      });
     });
+
+
+
   </script>
 
 
@@ -38,11 +46,11 @@
 
     <header class="navbar rounded-top-4 bg-light row align-items-start" style="--bs-bg-opacity: .5; --bs-light-rgb: 218,218,202;">
       <div class="col">
-        <div class=""><img class="logo" src="./images/passwordkeepr_logo.png" alt="PasswordKeepR"></div>
-        <div class="">Your Organization's Password Manager</div>
+        <div><a href="/" title="PasswordKeepR - Your Organization's Password Manager"><img class="logo" src="./images/passwordkeepr_logo.png" alt="PasswordKeepR"></a></div>
+        <div>Your Organization's Password Manager</div>
       </div>
       <navigation class="navi text-end col">
-        <div><img class="org-logo" src="./images/org-logo_01.png" alt="Company Logo 01"></div>
+        <div><a href="https://www.lighthouselabs.ca/" title="Light House Labs" target="_blank"><img class="org-logo" src="./images/org-logo_01.png" alt="Company Logo 01"></a></div>
         <div class="mt-3">Welcome, <%= user.name %>!</div>
         <div class="menu">
           <a href="#password-list" >List All</a> |
@@ -57,7 +65,12 @@
       <!-- container for holding the Edit/Add new password Form -->
 
         <section id="newPassword" class="rounded-3 bg-light-subtle shadow m-3 p-4">
-          <h2 id="sectionHeader"></h2>
+          <div class="row">
+            <h2 id="sectionHeader" class="col-11"></h2>
+            <div class="col-1">
+              <button id="closeMe" type="button" class="btn-close" aria-label="Close"></button>
+            </div>
+          </div>
           <form id="passwordForm" >
             <div class="row">
               <div class="website-name col-6">
@@ -161,8 +174,8 @@
 
             <div class="row text-center">
               <div class="actions col">
-                <button class="btn btn-success shadow m-2" type="submit" value="Save"><i class="bi bi-floppy"></i> Save</button>
-                <button class="btn btn-secondary shadow m-2" value="Cancel"><i class="bi bi-exclamation-circle"></i> Cancel</button>
+                <button class="btn btn-success shadow m-2 ps-3 pe-4" type="submit" value="Save"><i class="bi bi-floppy ps-2 pe-2"></i> Save</button>
+                <button class="btn btn-secondary shadow m-2 ps-3 pe-4" type="reset" value="Cancel"><i class="bi bi-exclamation-circle ps-2 pe-2"></i> Cancel</button>
               </div>
             </div>
           </form>
@@ -246,7 +259,7 @@
   }
 
   return password.join('');
-  
+
 }
 </script>
 
@@ -269,6 +282,23 @@
     }, 600);
     return false;
   })
+</script>
+
+<script>
+    /* JQuery UI Sortable */
+
+    $(function () {
+      $("#password-list").sortable();
+      $("#password-list").sortable({
+        forceHelperSize: true
+      });
+      // Getter
+      var forceHelperSize = $( "#password-list" ).sortable( "option", "forceHelperSize" );
+
+      // Setter
+      $( "#password-list" ).sortable( "option", "forceHelperSize", true );
+    });
+
 </script>
 
 </body>
