--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,11 +41,11 @@
             <label for="floatingPassword">Password</label>
           </div>
           <div class="text-center">
-            <button type="submit" class="btn btn-secondary px-4">LOGIN</button>
+            <button type="submit" class="btn btn-success px-4">LOGIN</button>
           </div>
         </div>
       </form>
-      
+
     </main>
     <footer class="login rounded-bottom-4 bg-light text-center" style="--bs-bg-opacity: .5; --bs-light-rgb: 218,218,202;">
       <div>Copyright 2023 | PasswordKeepR, LLC | Canada</div>
